--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,61 +1,73 @@
 [
     {
-        "title": "Lorem ipsum dolor sit.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem adipisci aut, veniam culpa suscipit asperiores, corrupti debitis quia consequatur animi beatae eius repellat fugiat? Dolore fuga omnis quis tempore."
+        "title": "A4: Persuasive or Deceptive Visualization?",
+        "year": "2024",
+        "image": "images/neg.svg",
+        "description": "A burning truth, Rising global surface temperatures are plotted for each year, dating back to 1960. The temperature has risen over 1.5 degrees over the past 40 years, with no stop in sight. Climate-related disasters are noted along different dates in the figure."
     },
     {
-        "title": "Inventore vel est voluptatibus?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Voluptatem, est fugit ullam commodi quam architecto numquam ex in ab dolor doloremque optio, eos labore cum dolorum quae. Aliquam, voluptas sunt tenetur officiis beatae sint ipsum error dicta labore."
+        "title": "A3: Visualization Design",
+        "year": "2024",
+        "image": "images/hifigure_final.svg",
+        "description": "The above figure compares the census data from 1900 and 2000 in order to answer whether there is a skew towards which sex has a longer life expectancy. The graphic is title Do women really live longer?. The census data from 1900 shows no particular skew, while the census data from 2000 shows that there are more reported women ages 70 and up compared to men."
     },
     {
-        "title": "Velit nisi autem deleniti?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Iusto, rem accusantium quibusdam animi quo deserunt qui dolorem amet corporis unde tempore ut iure minima earum cum voluptatem eveniet illum explicabo nesciunt praesentium repellendus. Incidunt cumque minus dolores tempora."
+        "title": "A2: Exploratory Data Analysis",
+        "year": "2024",
+        "image": "images/A2.svg",
+        "description": "What surprised me the most about the articles were the number of flips that occured in the Boston area. However, there have been many flips (as per the definition of the dataset) that have occured over the last 23 years in the Boston area. This is shown geographically in the above figure with all transacations in the Boston area marked in either blue (a flip) or red (other). A large number of flips have occured in Backbay, downtown, and North end --- all expensive zip codes."
     },
     {
-        "title": "Quaerat asperiores quam facilis!",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "title": "Nozaki–Bekki solitons in semiconductor lasers",
+        "year": "2024",
+        "image": "images/NB.svg",
         "description": "Exercitationem aut nulla non, culpa vero perspiciatis qui beatae architecto quidem maxime magni tenetur suscipit commodi dicta illo enim? Soluta voluptatem, laborum voluptatum quas labore cum. Aperiam exercitationem quas numquam?"
     },
     {
-        "title": "Similique vero a dicta?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "title": "Driven bright solitons on a mid-infrared laser chip",
+        "year": "2023",
+        "image": "images/soliton.svg",
         "description": "Doloribus dolorum nostrum, velit suscipit facilis delectus deserunt ipsum dolore asperiores! Cumque, aut possimus excepturi repudiandae exercitationem est officiis praesentium eaque magni, totam molestiae ipsum debitis modi quod quam quos?"
     },
     {
-        "title": "Hic dolores consectetur doloremque.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "title": "Active mid-infrared ring resonators.",
+        "year": "2022",
+        "image": "images/RT.svg",
         "description": "Saepe, nemo laboriosam labore eum numquam quasi dolore sed voluptatum, necessitatibus animi pariatur placeat, vero hic nihil ipsa corrupti quos doloremque voluptatibus voluptatem? Nam ab officiis dignissimos ipsum magni ad!"
     },
     {
         "title": "Maxime ratione quia minus.",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Id eius ex totam perspiciatis assumenda animi, ad velit nostrum aliquam! Consectetur neque beatae accusamus voluptates exercitationem placeat praesentium quas aliquam pariatur? Nulla animi dolorem reprehenderit nostrum. Reprehenderit, repellendus accusantium."
     },
     {
         "title": "Ex dolorem voluptates odit.",
+        "year": "2021",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Porro commodi molestias reprehenderit accusamus optio rerum ut sunt consequatur fugiat libero? Neque officiis rem quo soluta nostrum, illum eum, sit, saepe mollitia tempora molestias provident ipsam nisi? Dolore, exercitationem."
     },
     {
         "title": "Sunt doloremque id deleniti.",
+        "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Et velit eaque soluta neque mollitia odit quaerat, autem minima! Eum ipsam soluta porro. Alias porro eaque quae voluptatem enim. Ad, modi. Vel eum illum molestiae similique minima quas veritatis."
     },
     {
         "title": "Earum rem amet unde!",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Ex corrupti accusantium ipsam sequi reiciendis porro illum illo autem error architecto ea sit optio laboriosam, cupiditate necessitatibus quia cumque, eos eius, nostrum adipisci! Aperiam provident eveniet unde quia dolore!"
     },
     {
         "title": "Itaque illo sed enim?",
+        "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Vitae nemo libero officia possimus earum sint enim, tempore velit beatae nisi quis cumque? Totam, nemo eveniet! Quaerat mollitia perspiciatis fuga! Tempore cum praesentium rem ipsum commodi eligendi esse voluptatum."
     },
     {
         "title": "Perspiciatis soluta aut veritatis.",
+        "year": "2020",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Necessitatibus deleniti adipisci eius voluptate harum facilis veniam est et id minus soluta possimus accusamus voluptatem fuga, ut omnis accusantium obcaecati error nam atque dolorum amet fugiat consequuntur. Distinctio, possimus."
     }
