Lots of changes with lab 9

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
 
         "@floating-ui/dom": "^1.6.3",
 
-        "d3": "^7.9.0"
+        "d3": "^7.9.0",
+
+        "svelte-scrolly": "^0.0.4"
 
     }
 
